# citation-verifier-mcp

./: .dockerignore  .railwayignore  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Procfile  README.md  REMOTE_SETUP.md  docker-compose.yml  launch_remote_server.sh  pyproject.toml  railway.json  railway.md  railway.toml  railway_start.py  requirements.txt  setup.sh  simple_start.py  start_server.py  test_remote_server.py
.github/workflows/: ci.yml
src/citation_verifier_mcp/: __init__.py  server.py  websocket_server.py
tests/: README.md  conftest.py  test_basic_functionality.py  test_integration.py  test_remote_server.py  test_websocket_server.py
