[project]
name = "citation-verifier-mcp"
version = "0.0.1"
description = "MCP server for citation verification using the citation-verifier library"
authors = [{name = "Dave Flanagan"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "llm-citation-verifier>=0.1.1",
]

[project.scripts]
citation-verifier-mcp = "src.citation_verifier_mcp.server:main"
citation-verifier-remote = "src.citation_verifier_mcp.websocket_server:main"

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "websockets>=12.0",  # For testing WebSocket connections
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
